<resources>
    <string name="app_name">ГТО</string>
    <string name="action_about">О приложении</string>
    <string name="title_activity_about">О приложении</string>
    <string name="about_text">Данное приложение позволяет ознакомиться с дисциплинами и нормативами ГТО. \n\nИнформация взята с сайта gto.ru\n\nАвтор: Дмитрий Батуев\n\nСвязь:\nE-mail: i@batuevdm.ru\n\n </string>
    <string name="text_disc">Дисциплины</string>
    <string name="text_norm">Нормативы</string>
    <string name="text_nagr">Награды</string>
    <string name="text_abbit">Для аббитуриентов</string>
    <string name="text_beg">Бег</string>
    <string name="text_otzh">Отжимания</string>
    <string name="text_podt">Подтягивания</string>
    <string name="abbit_text">
        <![CDATA[
        <b>ВНИМАНИЮ АБИТУРИЕНТОВ!</b>
        <p>
            В соответствии с п.22 Положения о Всероссийском физкультурно-спортивном комплексе «Готов к труду и обороне» (ГТО), утвержденного Постановлением Правительства Российской Федерации от 11 июня 2014 года № 540, на основании Приказа Министерства образования России № 1147, в 2017 году поступающим на обучение по образовательным программам высшего образования, обладающим золотыми знаками отличия Всероссийского физкультурно-спортивного комплекса «Готов к труду и обороне» будет осуществляться начисление дополнительных баллов.
        </p>
        <p>
            В соответствии с локальными распорядительными актами, отражающими порядок начисления дополнительных баллов за золотой знак отличия ВФСК ГТО, ВУЗы Удмуртии в рамках приемной кампании 2017 г. предусматривают следующее:
        </p>
        <p>Глазовский государственный педагогический институт – 1 дополнительный балл</p>
        ]]>
    </string>
    <string-array name="disc_items">
        <item>Бег на короткие дистаниции</item>
        <item>Бег на длинные дистаниции</item>
        <item>Бег на лыжах</item>
        <item>Метание спортивного снаряда</item>
        <item>Метание теннисного мяча в цель</item>
        <item>Наклон вперед из положения стоя с прямыми ногами на полу</item>
        <item>Плавание</item>
        <item>Поднимание туловища из положения лежа на спине</item>
        <item>Подтягивание из виса лежа на низкой перекладине</item>
        <item>Подтягивание из виса на высокой перекладине</item>
        <item>Прыжок в длину с места толчком двумя ногами</item>
        <item>Прыжок в длину с разбега</item>
        <item>Рывок гири</item>
        <item>Сгибание и разгибание рук в упоре лежа на полу</item>
        <item>Сгибание и разгибание рук в упоре лежа с опорой о гимнастическую скамью</item>
        <item>Скандинавская ходьба</item>
        <item>Смешанное передвижение по пересеченной местности</item>
        <item>Смешанное передвижение 65&#8211;70 лет</item>
        <item>Стрельба</item>
        <item>Челночный бег 3x10 метров.</item>
    </string-array>
    <string name="title_activity_disc_description">Описание дисциплины</string>
    <string name="text_age">Ваш возраст</string>
    <string name="text_gender">Ваш пол</string>
    <string name="text_button_norm">Узнать нормативы</string>
    <string name="text_gold">Золото</string>
    <string name="text_silver">Серебро</string>
    <string name="text_bronze">Бронза</string>
    <string name="nagr_info">Награды вручаются участникам за успешное выполнение нормативов определенных возрастных ступеней комплекса ГТО.\nЗнаки отличия бывают бронзового, серебряного и золотого достоинств в каждой возрастной ступени.</string>
</resources>