<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.batuevdm.gto.MainActivity">

    <Button
        android:id="@+id/buttonDisc"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/text_disc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32999998" />

    <Button
        android:id="@+id/buttonNorm"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/text_norm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDisc" />

    <Button
        android:id="@+id/buttonNagr"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/text_nagr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNorm" />

    <Button
        android:id="@+id/buttonAbbit"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/text_abbit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNagr"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>
